[package]
name = "d3d11-openxr-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
glam = "0.30.9"
openxr = { git = "https://github.com/Ralith/openxrs.git" }
windows = { version = "0.62", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[features]
static = ["openxr/static"]
